update typescript and fix editor flicker

--- a/src/app/modules/auth/components/login/login.component.scss
+++ b/src/app/modules/auth/components/login/login.component.scss
@@ -69,5 +69,6 @@ label {
     height: 35px !important;
     padding-bottom: 0;
     margin-bottom: 1px;
+    padding-left: 8px;
   }
 }
